# Ozone-Blockchain

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  ozone  private_key.pem  public_key.pem
.cache/clangd/index/: block.cpp.1BBF8AFFE5EA237B.idx  block.cpp.9D98B432C3EB5CED.idx  block.hpp.36573287A487BFE7.idx  block.hpp.578B5756CAC465BC.idx  blockchain.cpp.65303AFC3B347F6B.idx  blockchain.cpp.7427502CC9D61337.idx  blockchain.hpp.1225FA89FD317113.idx  blockchain.hpp.9DD06CA019FB4BF5.idx  hash_utils.cpp.06058842C5A7B02E.idx  hash_utils.cpp.32EAC35E8C339033.idx  hash_utils.hpp.2898945576EAFC21.idx  hash_utils.hpp.7E3E8095CD4A17E9.idx  ipfs_utils.cpp.6B92C184F2250462.idx  ipfs_utils.cpp.83D5B91DA00034F4.idx  ipfs_utils.hpp.14C885FEBB8DAF9C.idx  ipfs_utils.hpp.9110BABD5835E593.idx  main.cpp.E9D9C111A775BCD9.idx  main.cpp.F469EF234D89CD32.idx  proof_of_work.cpp.2AAF3C7EF9CF8116.idx  proof_of_work.cpp.E3BEC45CBB0B9A07.idx  proof_of_work.hpp.25641B807B7F1CEB.idx  proof_of_work.hpp.42ED751B7AB4F05C.idx  transaction.cpp.0F80924DDF7C2951.idx  transaction.cpp.BBA425DFC1B8AB7B.idx  transaction.hpp.4AAC79C076944A54.idx  (+1 more)
.metals/: metals.lock.db  metals.mv.db
block_arc/: block.cpp  blockchain.cpp  hash_utils.cpp  ipfs_utils.cpp  main.cpp  proof_of_work.cpp  transaction.cpp
include/: block.hpp  blockchain.hpp  hash_utils.hpp  ipfs_utils.hpp  proof_of_work.hpp  transaction.hpp
networking/: build.sbt
networking/.bloop/: root-test.json  root.json
networking/.metals/: metals.lock.db
(+10 files in other folders)
